Fixes layout issue with CSS flexbox fill

--- a/src/main/static/css/main.css
+++ b/src/main/static/css/main.css
@@ -133,9 +133,13 @@ body {
 
 }
 
-.flex-column .flex-grow-1.scrollbar {
+/* .flex-column .flex-grow-1.scrollbar {
   height:0;
 }
+
+.flex-column .tab-pane.scrollbar-primary.scrollbar.flex-grow-1 {
+  height: auto;
+} */
 
 /*
  * D3 Styles
@@ -181,4 +185,8 @@ body {
 
 .slider-tick-label {
   width:30px !important;
+}
+
+.vh-100 {
+  height: 100vh!important;
 }
